RESOLVED FIXED215954
Sites built with flambe.js don't work with trackpad on iPad
https://bugs.webkit.org/show_bug.cgi?id=215954
Summary Sites built with flambe.js don't work with trackpad on iPad
Tim Horton
Reported 2020-08-28 16:19:12 PDT
Sites built with flambe.js don't work with trackpad on iPad
Attachments
Patch (6.74 KB, patch)
2020-08-28 16:20 PDT, Tim Horton
no flags
Patch (5.68 KB, patch)
2020-08-28 16:37 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2020-08-28 16:20:03 PDT
Radar WebKit Bug Importer
Comment 2 2020-08-28 16:20:52 PDT
Tim Horton
Comment 3 2020-08-28 16:37:46 PDT
EWS
Comment 4 2020-08-28 17:27:55 PDT
Committed r266314: <https://trac.webkit.org/changeset/266314> All reviewed patches have been landed. Closing bug and clearing flags on attachment 407513 [details].
Note You need to log in before you can comment on or make changes to this bug.