Cherry-pick r266314. rdar://problem/68652747

Sites built with flambe.js don't work with trackpad on iPad
    https://bugs.webkit.org/show_bug.cgi?id=215954

    Reviewed by Wenson Hsieh.

    Source/WebKit:

    New API Test: iOSMouseSupport.MouseTimestampTimebase

    * UIProcess/ios/WKMouseGestureRecognizer.mm:
    (-[WKMouseGestureRecognizer createMouseEventWithType:]):
    Use the timestamp property on UITouch instead of GSCurrentEventTimestamp().
    This property is in the same units as mach_absolute_time/MonotonicTime.
    Previously, treating a monotonic time as wall time resulted in it getting clamped to 0,
    breaking sites that depend on it.

    Tools:

    * TestWebKitAPI/Tests/WebKitCocoa/iOSMouseSupport.mm:
    (-[WKTestingHoverEvent locationInView:]):
    (-[WKTestingTouch timestamp]):
    (TEST):

    Canonical link: https://commits.webkit.org/228753@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266314 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/228499.47@safari-610-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610-branch@266849 268f45cc-cd09-0410-ab3c-d52691b4dbfc